# vapoursynth-sangnom

./: ChangeLog  LICENSE  Makefile.am  README.md  configure.ac  meson.build  sangnom.cpp  sangnom_c.cpp  sangnom_old.cpp
src/: sangnom.cpp
